# maplibre-native

./: .bazelrc  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE  flake.nix
.github/: changed-files.yml
.github/workflows/: android-ci.yml  android-device-test.yml  core-build.yml  core-release.yml  ios-ci.yml  ios-release.yml  pr-render-test-result.yml
android/examples/: sitemap.xml
android/examples/search/: search_index.json
bazel/: core.bzl
benchmark/android/app/: build.gradle
benchmark/api/: render.benchmark.cpp
docs/mdbook/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
expression-test/: expression_test_parser.cpp  expression_test_parser.hpp
include/mbgl/actor/: mailbox.hpp  message.hpp
include/mbgl/gl/: custom_layer.hpp
include/mbgl/i18n/: collator.hpp
include/mbgl/map/: bound_options.hpp  camera.hpp  map.hpp  projection_mode.hpp
include/mbgl/mtl/: autoreleasepool.hpp
include/mbgl/renderer/: query.hpp
include/mbgl/storage/: database_file_source.hpp  offline.hpp  online_file_source.hpp  resource.hpp  response.hpp
include/mbgl/style/: conversion_impl.hpp  filter.hpp  image.hpp  layer.hpp  property_expression.hpp  source.hpp  transition_options.hpp
include/mbgl/tile/: tile_necessity.hpp
include/mbgl/util/: chrono.hpp  color.hpp  enum.hpp  feature.hpp  (+4 more)
platform/android/: gradle.properties
platform/darwin/: BUILD.bazel
platform/glfw/: glfw_view.cpp  glfw_view.hpp  main.cpp
platform/ios/: BUILD.bazel
platform/node/: index.js
platform/rust/: build.rs
render-test/: manifest_parser.cpp  manifest_parser.hpp  parser.cpp
scripts/: license.cmake
test/: BUILD.bazel  CMakeLists.txt
test/algorithm/: update_renderables.test.cpp
test/android/: .gitignore  build.gradle  local.properties
test/android/app/: build.gradle
test/android/app/src/main/: AndroidManifest.xml
test/ios/: BUILD.bazel  Info.plist  ios_test_runner.cpp
test/style/: source.test.cpp
test/text/: formatted.test.cpp
test/util/: url.test.cpp
(+1482 files in other folders)
