load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")

cc_library(
    name = "testutils",
    hdrs = [
        "include/mbgl/test/util.hpp",
    ],
    strip_include_prefix = "include",
    deps = [
        "//vendor/googletest:gtest",
    ],
)

cc_library(
    name = "testlib",
    srcs = glob(
        [
            "src/mbgl/test/*.cpp",
            "**/*.test.cpp",
            "include/**/*.hpp"
        ],
        exclude = [
            "src/mbgl/test/test.cpp",
            "src/mbgl/test/http_server.cpp",
        ],
        allow_empty = False
    ),
    hdrs = glob([
        "src/mbgl/test/*.hpp",
    ]),
    includes = [
        "include"
    ],
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    strip_include_prefix = "src",
    deps = [
        "testutils",
        "//:mbgl-core",
    ] + select({
        "//:linux": ["//platform/linux:impl"],
        "//:ios": ["//platform/ios:sdk"]
    }),
    visibility = [
        "//test/ios:__pkg__"
    ]
)

cc_test(
    name = "core",
    args = [
        "--gtest_filter=-Map.StyleNetworkErrorRetry:Map.StyleNotFound",
    ],
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    data = glob(["fixtures/**/*"]) + [
        "//:scripts/style-spec-reference/v8.json",
    ],
    deps = [
        "testlib",
        "testutils",
        "//:mbgl-core",
        "//vendor/googletest:gtest_main",
    ],
)
